@@ -248,19 +248,16 @@ proc do_function_calls {} {
     if [support_complex_tests] {
 
 	setup_kfail_for_target gdb/12796 "x86_64-*-*"
-	setup_kfail_for_target gdb/12797 "arm*-*-*"
 	gdb_test "p t_structs_fc(struct_val1)" ".*= 3 \\+ 3 \\* I" \
 	    "call inferior func with struct - returns float _Complex"
 
 	setup_kfail_for_target gdb/12783 "i?86-*-*"
 	setup_kfail_for_target gdb/12796 "x86_64-*-*"
-	setup_kfail_for_target gdb/12797 "arm*-*-*"
 	gdb_test "p t_structs_dc(struct_val1)" ".*= 4 \\+ 4 \\* I" \
 	    "call inferior func with struct - returns double _Complex"
 
 	setup_kfail_for_target gdb/12783 "i?86-*-*"
 	setup_kfail_for_target gdb/12796 "x86_64-*-*"
-	setup_kfail_for_target gdb/12797 "arm*-*-*"
 	gdb_test "p t_structs_ldc(struct_val1)" "= 5 \\+ 5 \\* I" \
 	    "call inferior func with struct - returns long double _Complex"
     }
