@@ -1,3 +1,8 @@
+2011-12-21  Ulrich Weigand  <ulrich.weigand@linaro.org>
+
+	PR tdep/12797
+	* gdb.base/callfuncs.exp: Remove KFAIL.
+
 2011-12-19  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/reread.exp: If srcfile2 fails to build retry it with
